--- a/admin_styling.css
+++ b/admin_styling.css
@@ -1,7 +1,6 @@
 /* * * * * * * * * *
 * STYLING DEFAULTS
 * * * * * * * * * */
-* { margin: 0px; padding: 0px; }
 a { text-decoration: none; }
 h1, h2, h3, h4, h5, h6 { font-family: 'Noto Serif', serif;}
 h2.page-title{
@@ -26,15 +25,14 @@ form input:focus { outline: none; }
 label {	margin-top: 20px; float: left; }
 /* tables */
 table { border-collapse: collapse; width: 70%; margin: 20px auto; }
-th, td { padding: 8px; text-align: left; border: 1px solid #ddd; }
-th { text-align: center;}
+/* th, td { padding: 8px; text-align: left; border: 1px solid #ddd; }
+th { text-align: center;} */
 /* buttons */
 .btn {
 	color: white;
 	background: #4E6166;
 	text-align: center;
 	border: none;
-	border-radius: 5px;
 	display: block;
 	letter-spacing: .1em;
 	padding: 13px 20px;
@@ -43,23 +41,11 @@ th { text-align: center;}
 /* * * * * * * * * *
 * HEADER
 * * * * * * * * * */
-.header {
-	padding: 15px 45px;
-	font-family: 'Noto Serif', serif;
-	color: white;
-	background: black;
-}
-.header .logo { width: 50%; float: left; }
-.header .logo h1 { color: white; }
-.header .user-info { width: 10%; margin-top: 10px; float: right;}
-.header .logout-btn { color: red; text-decoration: none; }
-.header:after{ content: ""; display: block; clear: both; }
+
 /* * * * * * * * * *
 * DASHBOARD
 * * * * * * * * * */
 .container {
-	width: 95%;
-	margin: 5px auto 50px;
 	border: 1px solid #BFBCB3;
 	padding: 10px 0px 50px;
 }
@@ -67,8 +53,6 @@ th { text-align: center;}
 .container.dashboard h1 { text-align: center; margin: 25px; }
 .container.dashboard .stats a {
 	display: inline-block;
-	padding: 30px;
-	margin: 5px;
 	width: 25%;
 	text-align: center;
 	border-radius: 3px;
@@ -79,11 +63,8 @@ th { text-align: center;}
 .container.dashboard .buttons { margin-left: 15px; }
 .container.dashboard .buttons a {
 	display: inline-block;
-	margin: 10px;
 	text-decoration: none;
 	color: #444;
-	padding: 10px 25px;
-	border: none;
 	background-color: #0E7D92;
 	color: white;
 }
